--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -188,7 +188,6 @@
     </section>
 
 
-
     <section id="section-3" class="pagesection">
         <div class="container reveal fade-bottom">
             <div class="content">
@@ -212,159 +211,6 @@
             </div>
         </div>
     </section>
-
-<!--     <section id="section-4" class="pagesection diagram">
-        <div class="title" style="text-align: center;">
-            Intelligent Business Software
-        </div>
-
-        <!--
-        <div class="cards-container">
-            <div class="flow-diagram">
-                <img src="/img/flow-diagram-horizontal.png" alt="">
-            </div>
-        </div>
-        -->
-
-        <div class="cards-container">
-            <div class="card">
-                <div class="card-title">
-                    Plan
-                </div>
-                <div class="card-image">
-                    <img src="/img/flow-pic-1.png" alt="">
-                </div>
-                <div class="card-subtitle">
-                    Business Requirements
-                </div>
-                <div class="card-details">
-                    <span>Understand the business goals</span>
-                    <span>Identify the problem/opportunity</span>
-                    <span>Define the required outcome</span>
-                    <span>Define the time-period</span>
-                </div>
-                <div class="card-uses">
-                    <p>Data Management Lifecycle initiation</p>
-                    <p>Unlimited data source leverage</p>
-                    <p>Outcome based report generation</p>
-                    <p>Targeted data workload definition </p>
-                    <p>Creativity come into play</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-title">
-                    Create
-                </div>
-                <div class="card-image">
-                    <img src="/img/flow-pic-2.png" alt="">
-                </div>
-                <div class="card-subtitle">
-                    Data Pipeline Design
-                </div>
-                <div class="card-details">
-                    <span>Explore</span>
-                    <span>Select</span>
-                    <span>Extract</span>
-                    <span>Prepare</span>
-                    <span>Cleanse</span>
-                    <span>Transform</span>
-                    <span>Augment</span>
-                    <span>Model</span>
-                    <span>Store</span>
-                    <span>Orchestrate</span>
-                    <span>Schedule</span>
-                    <span>Run</span>
-                </div>
-                <div class="card-uses">
-                    <p>Democratised data usage</p>
-                    <p>Data workload library</p>
-                    <p>Codeless data workload creation</p>
-                    <p>Hundreds of transformers </p>
-                    <p>Cloud agnostic</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-title">
-                    Release
-                </div>
-                <div class="card-image">
-                    <img src="/img/flow-pic-3.png" alt="">
-                </div>
-                <div class="card-subtitle">
-                    Automation
-                </div>
-                <div class="card-details">
-                    <span>Quality Assurance</span>
-                    <span>Build Release</span>
-                    <span>Deploy / Release</span>
-                    <span>Expose in Data Catalog</span>
-                </div>
-                <div class="card-uses">
-                    <p>Internal & external data source interaction</p>
-                    <p>Integration with CI/CD pipeline</p>
-                    <p>IT infrastructure footprint deletion</p>
-                    <p>Real-time compute availability monitoring</p>
-                    <p>Corporate tools integration </p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-title">
-                    Catalogue
-                </div>
-                <div class="card-image">
-                    <img src="/img/flow-pic-4.png" alt="">
-                </div>
-                <div class="card-subtitle">
-                    Governance & Controls
-                </div>
-                <div class="card-details">
-                    <span>Version control</span>
-                    <span>Track changes</span>
-                    <span>Deployment trigger</span>
-                    <span>User profile based access</span>
-                </div>
-                <div class="card-uses">
-                    <p>Data Governance integration</p>
-                    <p>Centralised data workload management</p>
-                    <p>Financial reporting</p>
-                    <p>Regulatory compliance recording & reporting</p>
-                    <p>Integration with corporate  authentication/authorization </p>
-                    <p>Govern Who & What & When</p>
-                    <p>Enforces compliance to avoid fines</p>
-                    <p>Corporate tools integration</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-title">
-                    Use
-                </div>
-                <div class="card-image">
-                    <img src="/img/flow-pic-5.png" alt="">
-                </div>
-                <div class="card-subtitle">
-                    Business Dashboard
-                </div>
-                <div class="card-details">
-                    <span>Analyse</span>
-                    <span>Visualise</span>
-                    <span>Insights</span>
-                    <span>Share</span>
-                    <span>Monitor</span>
-                    <span>Revise</span>
-                    <span>Review</span>
-                    <span>Report</span>
-                </div>
-                <div class="card-uses">
-                    <p>Standalone or Integration with web hooks</p>
-                    <p>Corporate tools integration</p>
-                    <p>Chatbot / Natural language interface</p>
-                    <p>ERP/MES Systems</p>
-                    <p>Third party systems from customers and or vendors</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
 
     <section id="section-4" class="pagesection reveal fade">
         <div class="content">
@@ -423,7 +269,7 @@
                 <div class="text">
                     Uncontrolled and unregulated data utilisation is constantly advancing through ‘shadow IT’,
                     resulting in inefficient set-ups which are restricted in potential and under-deliver in outcomes.
-
+                    <br />
                     <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> provides
                     a centralised collaboration focus, with all Data Workloads automatically aggregated into a library,
                     which is accessible through users’ profiles. Activity metadata is captured and visible in the
@@ -456,7 +302,7 @@
                     with numerous levels of approval from people who have no context as to the criticality of the timing.
                     Additionally, current estimates show that up to 60% of all available compute capability is sat idle, with
                     services holding compute resources even when they are not running.
-
+                    <br />
                     <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> allows you to
                     quickly and easily schedule a workload when you need it, and it manages the compute environment to only use
                     the resource whilst the workload is being run. Upon completion, it will automatically cleanse the footprint,
@@ -467,58 +313,31 @@
             </div>
         </div>
     </section>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
 
-    <section id="section-6" class="pagesection">
+    <section id="section-8" class="pagesection">
         <div class="democratization container">
             <div class="content">
-                <div class="visuals reveal fade">
-                    <img src="/img/section4.png" alt="">
-                </div>
                 <div class="descriptions reveal fade">
                     <div class="title">
                         Business in motion
                     </div>
                     <div class="subtitle">
-                        Example Use Case
+                        Example use-cases
                     </div>
                     <div class="text">
-                        The business is losing renewals for second car insurers to their competitors. Having defined
-                        the
-                        business challenge and understood the required goals, the Underwriter creates a new data
-                        workload to review the pricing data, and schedules the automated run in Microsoft Teams at
-                        6PM
-                        on Friday, when the weekend-price-status is set. The Underwriter then receives a
-                        notification to
-                        say the <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
-                        data workload was run and the results automatically stored in their library, ready to be
-                        applied.
+                      <ul>
+                        <li>Example 1 here...</li>
+                        <li>Example 2 here...</li>
+                        <li>Example 3 here...</li>
+                        <li>Example 4: consider an insurance business losing renewals for second-car insurance.
+                          The Underwriter creates a Data Workload with <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                          to review their pricing and risk data to come up with a new pricing plan. The Underwriter
+                          easily schedules the workload from Microsoft Teams and receives a notification when it
+                          has finished running. The results are automatically stored in their library, ready to
+                          be applied. <em>Watch the video before to see this use-case in more detail!</em>
+                        </li>
+                      </ul>
                     </div>
-                    <!--
-                    <div class="text">
-                        The findings were then presented to the respective business heads on Monday morning and
-                        prices
-                        automatically revised in the live system via a follow-up data workload. Marketing &
-                        Underwriting
-                        then collaboratively created new data workloads to monitor the uptake at the new
-                        price-points
-                        and scheduled variance of pricing based on individuals currently on their books, who matched
-                        the
-                        profile of the new-price-adopters.
-                    </div>
-                    -->
                     <a data-fancybox data-width="640" data-height="360" href="videos/introvideo.mp4">
                         <div class="subtitle " style="color:rgb(243, 152, 140);">
                             <span class="button navestimator">Play the video &nbsp; &nbsp; <i class="fas fa-play"></i>
@@ -527,12 +346,15 @@
                     </a>
 
                 </div>
+<!--               <div class="visuals reveal fade">
+                  <img src="/img/section4.png" alt="">
+              </div> -->
 
             </div>
         </div>
     </section>
 
-    <section id="section-7" class="pagesection">
+    <section id="section-9" class="pagesection">
         <div class="solutionoverview container">
             <div class="content">
                 <div class="descriptions reveal fade">
@@ -587,7 +409,7 @@
     </section>
 
 
-    <section id="section-8" class="pagesection">
+<!--     <section id="section-8" class="pagesection">
         <div class="democratization container">
             <div class="content">
                 <div class="visuals reveal fade">
@@ -633,8 +455,9 @@
 
         </div>
     </section>
+ -->
 
-    <section id="section-9" class="pagesection">
+    <section id="section-10" class="pagesection">
         <div class="democratization container">
             <div class="content">
 
