--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -334,7 +334,7 @@
                           to review their pricing and risk data to come up with a new pricing plan. The Underwriter
                           easily schedules the workload from Microsoft Teams and receives a notification when it
                           has finished running. The results are automatically stored in their library, ready to
-                          be applied. <em>Watch the video before to see this use-case in more detail!</em>
+                          be applied. <em style="color: #E84249;">Watch the video below to see this use-case in more detail!</em>
                         </li>
                       </ul>
                     </div>
@@ -346,9 +346,9 @@
                     </a>
 
                 </div>
-<!--               <div class="visuals reveal fade">
+              <div class="visuals reveal fade">
                   <img src="/img/section4.png" alt="">
-              </div> -->
+              </div>
 
             </div>
         </div>
@@ -407,55 +407,6 @@
 
         </div>
     </section>
-
-
-<!--     <section id="section-8" class="pagesection">
-        <div class="democratization container">
-            <div class="content">
-                <div class="visuals reveal fade">
-                    <img src="/img/refactor-2.png" alt="">
-                </div>
-                <div class="descriptions reveal fade">
-                    <div class="title">
-                        Simplified cloud journey
-                    </div>
-                    <div class="subtitle">
-                        Reducing re-factoring complexity
-                    </div>
-                    <div class="text">
-                        One of the challenges of leveraging Kubernetes and Cloud Services is the re-factoring of
-                        business applications. Valluu enables the legacy application current state to be maintained for
-                        the data workload transaction management. This reduces the risk profile, simplifys cloud
-                        adoption & reduces operational costs.
-                    </div>
-                    <!--
-                    <div class="text">
-                        Even after the migration to Kubernetes and the Cloud,
-                        Valluu will provide that data transaction management, that currently has to be fully
-                        re-engineered. A lot of these data workload transactions are imbedded in code, some of which is
-                        at best complementary code, requiring full understanding of the integration impact or at worst
-                        has been built with knowledge that no longer exists, and therefore presents a high risk change
-                        profile.
-                    </div>
-                    <div class="text">
-                        This dramatically reduces hardware and software consumption and most importantly reduces the CO2
-                        emissions, by only using compute available when it is running a data workload and automatically
-                        clearing it’s footprint, to retain the maximum amount of available capacity for other services.
-                    </div>
-                    <div class="text">
-                        This environment creates a high risk aversion change & implementation approach, rightly, which
-                        adds significantly to costs and loss of time, that companies cannot afford to absorb. Valluu
-                        removes this risk profile, simplifys cloud adoption and reduces associated costs by up to 20%.
-                    </div>
-                    -->
-
-                </div>
-
-            </div>
-
-        </div>
-    </section>
- -->
 
     <section id="section-10" class="pagesection">
         <div class="democratization container">
