--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -407,8 +407,57 @@
 
         </div>
     </section>
+  
+  <section id="section-10" class="pagesection">
+        <div class="democratization container">
+            <div class="content">
+                <div class="visuals reveal fade">
+                    <img src="/img/refactor-2.png" alt="">
+                </div>
+                <div class="descriptions reveal fade">
+                    <div class="title">
+                        Simplified cloud journey
+                    </div>
+                    <div class="subtitle">
+                        Reducing re-factoring complexity
+                    </div>
+                    <div class="text">
+                        One of the challenges of leveraging Kubernetes and Cloud Services is the re-factoring of
+                        business applications. Valluu enables the legacy application current state to be maintained for
+                        the data workload transaction management. This reduces the risk profile, simplifys cloud
+                        adoption & reduces operational costs.
+                    </div>
+                    <!--
+                    <div class="text">
+                        Even after the migration to Kubernetes and the Cloud,
+                        Valluu will provide that data transaction management, that currently has to be fully
+                        re-engineered. A lot of these data workload transactions are imbedded in code, some of which is
+                        at best complementary code, requiring full understanding of the integration impact or at worst
+                        has been built with knowledge that no longer exists, and therefore presents a high risk change
+                        profile.
+                    </div>
+                    <div class="text">
+                        This dramatically reduces hardware and software consumption and most importantly reduces the CO2
+                        emissions, by only using compute available when it is running a data workload and automatically
+                        clearing it’s footprint, to retain the maximum amount of available capacity for other services.
+                    </div>
+                    <div class="text">
+                        This environment creates a high risk aversion change & implementation approach, rightly, which
+                        adds significantly to costs and loss of time, that companies cannot afford to absorb. Valluu
+                        removes this risk profile, simplifys cloud adoption and reduces associated costs by up to 20%.
+                    </div>
+                    -->
 
-    <section id="section-10" class="pagesection">
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+  
+  
+
+    <section id="section-11" class="pagesection">
         <div class="democratization container">
             <div class="content">
 
@@ -420,7 +469,7 @@
                         Protecting today and the future
                     </div>
                     <div class="text">
-                        Valluu is designed to leverage the companies investment
+                        <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> is designed to leverage a company's investment
                         in operational and information technologies. This achieves major operational efficiencies
                         through reduced labour time & maximisation of IT infrastructure.
                     </div>
