--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -376,7 +376,7 @@
                 </div>
               <div class="visuals reveal fade">
                   <!-- <img src="img/section4.png" alt=""> -->
-                  <img src="img/lifecycleGIF.gif" alt="">
+                  <img src="img/LifecycleGIF.gif" alt="">
               </div>
 
             </div>
