Update solution overview image

--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -426,11 +426,14 @@
                         </div>
                     </a>
                 </div>
-                <div class="visuals reveal fade">
+<!--                 <div class="visuals reveal fade">
                     <a href="/img/solutionoverviewisolated.svg" data-fancybox="images">
                         <img src="img/solutionoverview.svg" alt="" style="max-width: 500px; margin-left: 20px;">
                     </a>
                     <br />
+                </div> -->
+                <div class="visuals reveal fade">
+                    <img src="img/dataworkloadslifecycle.svg" alt="">
                 </div>
 
             </div>
