Changes as per weekend, waiting final content

--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="subtitle">
                         <p>
-                            Mind the gap
+                            Unable to run your Data Workloads?
                         </p>
                     </div>
                     <div class="text">
@@ -161,8 +161,32 @@
             </div>
         </div>
     </section>
+  
+  <section id="section-2" class="pagesection">
+        <div class="container reveal fade-bottom">
+            <div class="content">
+                <div class="descriptions">
+                    <div class="title">
+                        What do we mean by a 'Data Workload'?
+                    </div>
+                    <div class="subtitle">
+                        <p>(Subtitle to go here)
+                        </p>
+                    </div>
+                    <div class="text">
+                        (Text to go here.)
+                    </div>
+                </div>
+                <div class="visuals">
+                    <image class="reveal fade" src="img/refactor-2.png" style="max-height: 400px;"></image>
+                </div>
+            </div>
+            <div class="aboutarrow">
+            </div>
+        </div>
+    </section>
 
-    <section id="section-2" class="pagesection">
+    <section id="section-3" class="pagesection">
         <div class="container reveal fade-bottom">
             <div class="content">
                 <div class="visuals">
@@ -208,31 +232,6 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-            </div>
-            <div class="aboutarrow">
-            </div>
-        </div>
-    </section>
-
-
-    <section id="section-3" class="pagesection">
-        <div class="container reveal fade-bottom">
-            <div class="content">
-                <div class="descriptions">
-                    <div class="title">
-                        What do we mean by a 'Data Workload'?
-                    </div>
-                    <div class="subtitle">
-                        <p>(Subtitle to go here)
-                        </p>
-                    </div>
-                    <div class="text">
-                        (Text to go here.)
-                    </div>
-                </div>
-                <div class="visuals">
-                    <image class="reveal fade" src="img/refactor-2.png" style="max-height: 400px;"></image>
                 </div>
             </div>
             <div class="aboutarrow">
@@ -350,21 +349,15 @@
                         Business in motion
                     </div>
                     <div class="subtitle">
-                        Example use-cases
+                        An example use-case
                     </div>
                     <div class="text">
-                      <ul>
-                        <li>Example 1 here...</li>
-                        <li>Example 2 here...</li>
-                        <li>Example 3 here...</li>
-                        <li>Example 4: consider an insurance business losing renewals for second-car insurance.
-                          The Underwriter creates a Data Workload with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
-                          to review their pricing and risk data to come up with a new pricing plan. The Underwriter
-                          easily schedules the workload from Microsoft Teams and receives a notification when it
-                          has finished running. The results are automatically stored in their library, ready to
-                          be applied. <em style="color: #E84249;">Watch the video below to see this use-case in more detail!</em>
-                        </li>
-                      </ul>
+                      Example 4: consider an insurance business losing renewals for second-car insurance.
+                      The Underwriter creates a Data Workload with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                      to review their pricing and risk data to come up with a new pricing plan. The Underwriter
+                      easily schedules the workload from Microsoft Teams and receives a notification when it
+                      has finished running. The results are automatically stored in their library, ready to
+                      be applied. <em style="color: #E84249;">Watch the video below to see this use-case in more detail!</em>
                     </div>
                     <a data-fancybox data-width="640" data-height="360" href="videos/introvideo.mp4">
                         <div class="subtitle " style="color:rgb(243, 152, 140);">
