--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -421,7 +421,7 @@
                 </div>
 <!--                 <div class="visuals reveal fade">
                     <a href="/img/solutionoverviewisolated.svg" data-fancybox="images">
-                        <img src="img/solutionoverview.svg" alt="" style="max-width: 500px; margin-left: 20px;">
+                        <img src="img/dataworkloadslifecycle-blacktext.png" alt="" style="max-width: 500px; margin-left: 20px;">
                     </a>
                     <br />
                 </div> -->
