--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -352,7 +352,7 @@
                         An example use-case
                     </div>
                     <div class="text">
-                      Example 4: consider an insurance business losing renewals for second-car insurance.
+                      Consider an insurance business losing renewals for second-car insurance.
                       The Underwriter creates a Data Workload with <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
                       to review their pricing and risk data to come up with a new pricing plan. The Underwriter
                       easily schedules the workload from Microsoft Teams and receives a notification when it
@@ -426,7 +426,7 @@
                     <br />
                 </div> -->
                 <div class="visuals reveal fade">
-                    <img src="img/dataworkloadslifecycle.svg" alt="">
+                    <img src="img/dataworkloadslifecycle-blacktext.png" alt="">
                 </div>
 
             </div>
