--- a/index.html
+++ b/index.html
@@ -129,10 +129,41 @@
         -->
         </div>
     </section>
-
-    <section id="section-1" class="pagesection">
+  
+  <section id="section-1" class="pagesection">
       <div class="container reveal fade-bottom">
             <div class="content">
+                <div class="descriptions">
+                    <div class="title">
+                        Intelligent business execution system
+                    </div>
+<!--                     <div class="subtitle">
+                        <p>
+                            (Subtitle)
+                        </p>
+                    </div> -->
+                    <div class="text">
+                      Valluu empowers Business Users to create and run Data Workloads to solve their problems and
+                      add value to the business. Valluu not only enables insight to be gathered from data, whether
+                      internally or externally stored, but also, crucially, allows users to take corrective actions
+                      from that insight.
+                    </div>
+                </div>
+              <div class="visuals">
+                  <image class="reveal fade" src="img/valluu-red.svg" style="max-height: 400px;"></image>
+              </div>
+            </div>
+            <div class="aboutarrow">
+            </div>
+        </div>
+    </section>
+
+    <section id="section-2" class="pagesection">
+      <div class="container reveal fade-bottom">
+            <div class="content">
+              <div class="visuals">
+                  <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
+              </div>
                 <div class="descriptions">
                     <div class="title">
                         Why can't we exploit our data?
@@ -146,23 +177,20 @@
                         A recent study* showed that 75% of employees are restricted when it comes to being able to exploit
                         the potential of their company’s data. The current Business and IT solutions are complex, expensive,
                         and unable to meet the pressures on the ever increasing demands for the use of data, and the Business
-                        and IT functions are separated into two silos, with a huge gap in between, and so they are
+                        and IT functions are separated into two silos, with a large gap in between, and so they are
                         collectively unable to meet the demands of the business in the required timeframe.
                     </div>
                     <div class="notes">
                         <p>*The Human Impact of Data Literacy - Report 2020 - Accenture</p>
                     </div>
                 </div>
-              <div class="visuals">
-                  <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
-              </div>
             </div>
             <div class="aboutarrow">
             </div>
         </div>
     </section>
   
-  <section id="section-2" class="pagesection">
+  <section id="section-3" class="pagesection">
         <div class="container reveal fade-bottom">
             <div class="content">
                 <div class="descriptions">
@@ -191,7 +219,7 @@
         </div>
     </section>
 
-    <section id="section-3" class="pagesection">
+    <section id="section-4" class="pagesection">
         <div class="container reveal fade-bottom">
             <div class="content">
                 <div class="visuals">
@@ -212,8 +240,7 @@
                         unlock the potential of their company's data for their own needs...
                         <ul>
                             <li><span style="color: #E84249;"">COO:</span> Gain governance and control oversight of
-                                all data management system changes, to enable Chain-of-Custody
-                                & GDPR compliance
+                                all data management system changes, to enable Chain-of-Custody, GDPR, and sustainability compliance
                             </li>
                             <li><span style="color: #E84249;"">CFO:</span> Create personal Data Workloads to understand
                                 and implement corrective investments and cost management decisions
@@ -234,7 +261,7 @@
                               critical business transactions
                             </li>
                               <li><span style="color: #E84249;"">Business Technologist:</span> Create and maintain Data
-                              Workloads to implement business decisions that direct customer and business transactions
+                              Workloads to implement business decisions that directly impact customer and business transactions
                             </li>
                         </ul>
                     </div>
@@ -245,7 +272,7 @@
         </div>
     </section>
 
-    <section id="section-4" class="pagesection reveal fade">
+    <section id="section-5" class="pagesection reveal fade">
         <div class="content">
             <div class="descriptions reveal fade">
                 <div class="title">
@@ -258,7 +285,7 @@
                     <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> bridges the gap
                     between Business and IT to put the use of data into the hands of the business user.
                     We have created a single interface for all the actors in the data management lifecycle to work together in
-                    a common way with a user-centred design, providing true agility and innovation where it’s needed most: in
+                    a common way with an end-user-centred design, providing true agility and innovation where it’s needed most: in
                     the hands of the business.
                 </div>
             </div>
@@ -268,7 +295,7 @@
         </div>
     </section>
   
-  <section id="section-5" class="pagesection reveal fade">
+  <section id="section-6" class="pagesection reveal fade">
         <div class="content">
             <div class="visuals reveal fade">
                 <img src="img/flow-pic-2.png" alt="" style="max-width: 300px;">
@@ -290,7 +317,7 @@
         </div>
     </section>
   
-  <section id="section-6" class="pagesection reveal fade">
+  <section id="section-7" class="pagesection reveal fade">
         <div class="content">
             <div class="descriptions reveal fade">
                 <div class="title">
@@ -307,7 +334,7 @@
                     a centralised collaboration focus, with all Data Workloads automatically aggregated into a library,
                     which is accessible through users’ profiles. Activity metadata is captured and visible in the
                     management dashboard so that administrators can monitor and guide system usage. Poor regulatory
-                    management arising in the world of shadow IT exposes a company to the risk of huge fines and
+                    management arising in the world of shadow IT exposes a company to the risk of large fines and
                     associated brand damage; <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
                     cuts this risk with its built-in controls and facility for regulatory reporting.
                 </div>
@@ -318,7 +345,7 @@
         </div>
     </section>
   
-  <section id="section-7" class="pagesection reveal fade">
+  <section id="section-8" class="pagesection reveal fade">
         <div class="content">
             <div class="visuals reveal fade">
                 <img src="img/flow-pic-5.png" alt="" style="max-width: 300px;">
@@ -347,7 +374,7 @@
         </div>
     </section>
 
-    <section id="section-8" class="pagesection">
+    <section id="section-9" class="pagesection">
         <div class="democratization container">
             <div class="content">
                 <div class="descriptions reveal fade">
@@ -382,9 +409,12 @@
         </div>
     </section>
 
-    <section id="section-9" class="pagesection">
+    <section id="section-10" class="pagesection">
         <div class="solutionoverview container">
             <div class="content">
+              <div class="visuals reveal fade">
+                    <img src="img/solution-overview-3.png" alt="">
+                </div>
                 <div class="descriptions reveal fade">
                     <div class="title">
                         Solution overview
@@ -431,9 +461,6 @@
                     </a>
                     <br />
                 </div> -->
-                <div class="visuals reveal fade">
-                    <img src="img/dataworkloadslifecycle-blacktext.png" alt="">
-                </div>
 
             </div>
 
@@ -469,7 +496,7 @@
   
   
 
-    <section id="section-10" class="pagesection">
+    <section id="section-11" class="pagesection">
         <div class="democratization container">
             <div class="content">
 
