--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@
                         </p>
                     </div> -->
                     <div class="text">
-                      Valluu empowers Business Users to create and run Data Workloads to solve their problems and
-                      add value to the business. Valluu not only enables insight to be gathered from data, whether
-                      internally or externally stored, but also, crucially, allows users to take corrective actions
-                      from that insight.
+                      <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> empowers
+                      Business Users to create and run Data Workloads to solve their problems and add value to the
+                      business. <img src="img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                      not only enables insight to be gathered from data, whether internally or externally stored, but
+                      also, crucially, allows users to take corrective actions from that insight.
                     </div>
                 </div>
               <div class="visuals">
