--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="logo">
                 <image src="img/valluu.svg"></image>
             </div>
-            <div class="title" style="font-size: 3em; margin-bottom: 20px;">Data Democratisation
+            <div class="title" style="margin-bottom: 20px;">Data Democratisation
             </div>
             <div style="font-size: 1.5em; color: #ffffff; font-family: graphik-regular;">
               Realise the value of your data
